<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/mealHeader"
        layout="@layout/view_meal_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/ing_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/darkBlue"
        android:text="@string/ingredients"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealHeader" />

    <TextView
        android:id="@+id/ing_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:textColor="@color/primary"
        android:textSize="12sp"
        android:paddingVertical="3dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/items_text_bg"
        android:text="@string/_0_items"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ing_text"
        app:layout_constraintStart_toEndOf="@+id/ing_text"
        app:layout_constraintTop_toTopOf="@+id/ing_text"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ingredientsRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="4dp"
        android:clipToPadding="false"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_ingredient"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ing_text" />

    <TextView
        android:id="@+id/cooking_ins_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:textColor="@color/darkBlue"
        android:text="@string/cooking_instructions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredientsRecycler" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stepsRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:nestedScrollingEnabled="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_step"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cooking_ins_text" />

    <TextView
        android:id="@+id/watch_tut_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        android:textColor="@color/darkBlue"
        android:text="@string/watch_tutorial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepsRecycler" />

    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
        android:id="@+id/youtube_player_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintTop_toBottomOf="@+id/watch_tut_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:autoPlay="false"
        />
</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>